# PolyChef

./: .gitignore  CMakeLists.txt  README.en.md  README.md  atom.cpp  atom.h  blossom.cpp  blossom.h  chemio.cpp  chemio.h  chemtable.cpp  chemtable.h  config.json  crosslinker.cpp  crosslinker.h  curve.cpp  curve.h  customFunction.cpp  exception.h  graph.cpp  graph.h  grid.cpp  grid.h  hash.h  input.json  kdtree.hpp  loadlib.cpp  loadlib.h  main.cpp  mathfunc.cpp  mathfunc.h  optimizer.cpp  optimizer.h  spreading.cpp  spreading.h  utility.cpp  utility.h
Qt/: main.py  ssh_manager.py  ui_main.py
TestCurves/: curve0.csv  curve1.csv  curve10.csv  curve100.csv  curve101.csv  curve102.csv  curve103.csv  curve104.csv  curve105.csv  curve106.csv  curve107.csv  curve108.csv  curve109.csv  curve11.csv  curve110.csv  curve111.csv  curve112.csv  curve113.csv  curve114.csv  curve115.csv  curve116.csv  curve117.csv  curve118.csv  curve119.csv  curve12.csv  curve120.csv  curve121.csv  curve122.csv  curve123.csv  curve124.csv  curve125.csv  curve126.csv  curve127.csv  curve128.csv  curve129.csv  curve13.csv  curve130.csv  curve131.csv  curve132.csv  curve133.csv  (+104 more)
de/: DifferentialEvolution.h
example/CNT/: crosslink.mol2
example/CinquefoilKnot/: string_0.mol2  string_1.mol2  string_10.mol2  string_11.mol2  string_12.mol2  string_13.mol2  string_14.mol2  string_15.mol2  string_16.mol2  string_17.mol2  string_18.mol2  string_19.mol2  string_2.mol2  string_20.mol2  string_21.mol2  string_22.mol2  string_23.mol2  string_24.mol2  string_25.mol2  string_26.mol2  string_27.mol2  string_28.mol2  string_29.mol2  string_3.mol2  string_30.mol2  string_31.mol2  string_32.mol2  string_33.mol2  string_34.mol2  string_35.mol2  string_36.mol2  string_37.mol2  string_38.mol2  string_39.mol2  string_4.mol2  string_5.mol2  string_6.mol2  string_7.mol2  string_8.mol2  string_9.mol2
inputs/: 1m6m.csv  3DTorus.csv  3Dflower.csv  FigureEightKnot.csv  FigureEightKnot_x30.csv  OverhandKnot.csv  RunningKnot.csv  RunningKnot_x100.csv  StevedoreKnot.csv  test_in.csv
kdtree/: aabb.cpp  aabb.hpp  kdtree.cpp  kdtree.hpp  point.hpp
script/: rdkit_helper.py
(+246 files in other folders)
